data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1566.wast
;; 7. **Test 7: Mixed Block and Loop with Unexpected Type Results and Unreachable**    - A combination of `block` and `loop` instructions where an `unreachable` impacts the inferred and expected stack types across looping structures.    - **Constraint Checked:** Evaluates type propagation and control flow type expectations involving nested blocks and loops with unreachable.

(assert_invalid
  (module
    (func
      (block (loop (unreachable) (f32.add (f32.const 0) (f32.const 0))))
    )
  )
  "type mismatch"
)